<resources>
    <string name="app_name">LeanTech</string>

    <!-- fragment_filled_profile -->
    <string name="save_data_profile">Сохранить</string>
    <string name="name_user">Имя</string>
    <string name="second_name_user">Фамилия</string>
    <string name="patronymic_user">Отчество</string>
    <string name="day_birthday_user">День рождения</string>
    <string name="position_user">Должность</string>
    <string name="number_phone">Номер телефона</string>
    <string name="nickname_telegram">Никнейм в телеграме</string>
    <string name="empty_field_name">Пустое поле имя</string>
    <string name="empty_filed_second_name">Пустое поле фамилия</string>
    <string name="empty_filed_position">Пустое поле должность</string>
    <string name="empty_filed_day_birthday">Пустое поле день рождения</string>
    <string name="required_field">Обязательное поле</string>

    <!-- fragment_registration -->
    <string name="log_in">Авторизоваться</string>

    <!-- fragment_profile -->
    <string name="profile_full_name">%s %s %s</string>
    <string name="profile_phone_number">Номер телефона: %s</string>
    <string name="profile_birthday">День рождения: %s</string>
    <string name="profile_telegram">Телеграм: %s</string>
    <string name="profile_position">Должность: %s</string>
    <string name="profile_edit">Редактировать</string>
    <string name="no_number">Номер отсутствует</string>
    <string name="no_telegram">Телеграм отсутствует</string>

    <!-- fragment_person_eat -->
    <string name="enter_count_eat">Введите количество</string>

    <!-- fragment_office_map -->
    <string name="error_get_point">Не удалось получить поинты</string>
    <string name="error_save_point">Не удалось сохранить поинт</string>
    <string name="error_get_profile_info">Не удалось получить имя для сохранения</string>
    <string name="error_empty_coordinates">Нет координат</string>

    <!-- alert_dialog -->
    <string name="dialog_attention">Внимание</string>
    <string name="dialog_yes">ДА</string>
    <string name="dialog_back">НАЗАД</string>
    <string name="dialog_message_save_point">Вы уверены что хотите сохранить поинт</string>

    <!-- menu_bottom_navigation -->
    <string name="map">Карта</string>
    <string name="profile">Профиль</string>
    <string name="eat">Еда</string>

    <!-- error_message -->
    <string name="unknown_error">Произошла неизвестная ошибка, повторите операцию позже</string>
    <string name="sign_in_canceled_error">Вход был отменен или отменены разрешения входа</string>
    <string name="sign_in_progress_error">Выполняющийся процесс входа не модет быть продолжен</string>
    <string name="sign_in_failed_error">Попытка входа с текущей учетной записи не удалась</string>
    <string name="no_internet_connection">Нет интернет подключения</string>
</resources>
