<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="@dimen/fragment_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvFullName"
                style="@style/Text.XXXLarge.Danube"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@tools:sample/lorem/random" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvTePosition"
                style="@style/Text.Large.Danube"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/profile_text_view_margin_top"
                android:drawableStart="@drawable/ic_position"
                android:drawablePadding="@dimen/profile_drawable_padding"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvFullName"
                tools:text="@string/profile_position" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvBirthday"
                style="@style/Text.Large.Danube"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/profile_text_view_margin_top"
                android:drawableStart="@drawable/ic_birthday"
                android:drawablePadding="@dimen/profile_drawable_padding"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTePosition"
                tools:text="@string/profile_birthday" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvPhoneNumber"
                style="@style/Text.Large.Danube"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/profile_text_view_margin_top"
                android:drawableStart="@drawable/ic_phone"
                android:drawablePadding="@dimen/profile_drawable_padding"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvBirthday"
                tools:text="@string/profile_phone_number" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvTelegram"
                style="@style/Text.Large.Danube"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/profile_text_view_margin_top"
                android:drawableStart="@drawable/ic_telegram"
                android:drawablePadding="@dimen/profile_drawable_padding"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvPhoneNumber"
                tools:text="@string/profile_telegram" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnEditProfile"
        style="@style/OutlinedButtonDanube.2.TextDanube"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/button_edit_profile_horizontal_margin"
        android:layout_marginBottom="@dimen/button_edit_profile_bottom_margin"
        android:paddingVertical="@dimen/button_edit_profile_padding_vertical"
        android:text="@string/profile_edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <FrameLayout
        android:id="@+id/flProgress"
        style="@style/ProgressBarStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:indeterminate="true" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
